[package]
name = "jet-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "*"
tokio = { version = "1.48.0", features = ["full"] }
async-nats = "0.45.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.28"
futures-util = "0.3.31"


[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

